force-app/main/default/objects/SESOC__Document__c/SESOC__Document__c.object-meta.xml
<CustomObject>
    <description>E-Signature Documents</description>
    <label>Document</label>
    <nameField>
        <displayFormat>D-{000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>