force-app/main/default/objects/SESOC__Document__c/fields/SESOC__Document_Collection_Index__c.field-meta.xml
<CustomField>
    <fullName>SESOC__Document_Collection_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this required lookup field to the Document Collection Index. By default, it is blank.</description>
    <label>Document Collection Index</label>
    <referenceTo>LLC_BI__Document_Collection_Index__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>