force-app/main/default/objects/SESOC__Document__c/fields/SESOC__Package__c.field-meta.xml
<CustomField>
    <fullName>SESOC__Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this required lookup field to the package.</description>
    <label>Package</label>
    <referenceTo>SESOC__Package__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>