force-app/main/default/objects/SESOC__Document__c/fields/SESOC__Status__c.field-meta.xml
<CustomField>
    <fullName>SESOC__Status__c</fullName>
    <description>The system automatically populates this required picklist to track the status of the document. By default, it is blank.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Pending Download</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>