force-app/main/default/objects/SESOC__Document__c/fields/SESOC__VendorId__c.field-meta.xml
<CustomField>
    <fullName>SESOC__VendorId__c</fullName>
    <description>The system automatically populates this text field to track the vendor ID of the document.</description>
    <label>Vendor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>